--- a/app/src/main/res/layout/dl_left_information.xml
+++ b/app/src/main/res/layout/dl_left_information.xml
@@ -12,6 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:paddingLeft="32dp"
+        android:id="@+id/ll_me"
+        android:background="?android:attr/selectableItemBackground"
         android:layout_marginTop="53dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
