--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="fragment_background">#F7F7F7</color>
     <color name="vehicle_information_choose_vehicle_text_color">#FFFFFF</color>
     <color name="information_text_color">#666666</color>
+    <color name="blue_color">#4EA2F8</color>
     <color name="add_vehicle_text_color">#CCCCCC</color>
     <color name="add_vehicle_background">#b0000000</color>
     <color name="add_vehicle_frame_color">#4FA3F9</color>
