--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,5 @@
     <dimen name="four_word">46dp</dimen>
     <dimen name="two_word">78dp</dimen>
     <dimen name="toolbar_top">24dp</dimen>
+    <dimen name="gas_item_info_text_size">13sp</dimen>
 </resources>
