2016/3/29  15:09  完成了启动页的制作

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,10 +6,13 @@
     <color name="fragment_background">#F7F7F7</color>
     <color name="vehicle_information_choose_vehicle_text_color">#FFFFFF</color>
     <color name="information_text_color">#666666</color>
+    <color name="item_peccany_card_text">#999999</color>
+    <color name="splash_textcolor">#71D3F6</color>
     <color name="blue_color">#4EA2F8</color>
     <color name="add_vehicle_text_color">#CCCCCC</color>
     <color name="add_vehicle_background">#b0000000</color>
     <color name="add_vehicle_frame_color">#4FA3F9</color>
     <color name="toolbar_background">#FFFFFF</color>
     <color name="bottom_color">#3D3D3D</color>
+    <color name="login_blue_color">#50A2F8</color>
 </resources>
