--- a/app/src/main/res/layout/item_gas_station_info.xml
+++ b/app/src/main/res/layout/item_gas_station_info.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="#F7F7F7"
-    >
+    android:background="#F7F7F7">
     <android.support.v7.widget.CardView
         android:background="#FFFFFF"
         android:layout_marginTop="16dp"
