--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,111 +3,131 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <include layout="@layout/login_toolbar"/>
+
+    <include layout="@layout/login_toolbar" />
+
     <LinearLayout
-        android:background="@color/toolbar_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/toolbar_background"
         android:orientation="vertical">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="160dp">
+
             <ImageView
-                android:layout_centerInParent="true"
-                android:src="@mipmap/no_head"
+                android:id="@+id/iv_user_head"
                 android:layout_width="104dp"
                 android:layout_height="104dp"
-                android:id="@+id/iv_user_head" />
+                android:layout_centerInParent="true"
+                android:src="@mipmap/no_head" />
         </RelativeLayout>
+
         <LinearLayout
-            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="@dimen/username_frame_height"
             android:layout_marginLeft="@dimen/frame_margin"
             android:layout_marginRight="@dimen/frame_margin"
-            android:gravity="center_vertical"
-            android:background="@mipmap/username_frame">
+            android:layout_marginTop="16dp"
+            android:background="@mipmap/username_frame"
+            android:gravity="center_vertical">
+
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginLeft="16dp"
-                android:src="@mipmap/username_img"/>
+                android:src="@mipmap/username_img" />
+
             <EditText
                 android:id="@+id/et_username"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="28dp"
                 android:background="@null"
+                android:imeOptions="actionNext"
+                android:nextFocusForward="@+id/et_password"
+                android:singleLine="true"
+                android:text="@string/sample_text"
                 android:textColor="@color/login_blue_color"
-                android:text="463201777"
-                android:textSize="@dimen/login_frame_textsize"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:textSize="@dimen/login_frame_textsize" />
         </LinearLayout>
+
         <LinearLayout
-            android:layout_marginTop="24dp"
             android:layout_width="match_parent"
             android:layout_height="@dimen/username_frame_height"
             android:layout_marginLeft="@dimen/frame_margin"
             android:layout_marginRight="@dimen/frame_margin"
-            android:gravity="center_vertical"
-            android:background="@mipmap/username_frame">
+            android:layout_marginTop="24dp"
+            android:background="@mipmap/username_frame"
+            android:gravity="center_vertical">
+
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginLeft="16dp"
-                android:src="@mipmap/password_img"/>
+                android:src="@mipmap/password_img" />
+
             <EditText
                 android:id="@+id/et_password"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="28dp"
                 android:background="@null"
-                android:textColor="@color/login_blue_color"
-                android:text="463201777"
-                android:textSize="@dimen/login_frame_textsize"
+                android:singleLine="true"
+                android:imeOptions="actionDone"
                 android:inputType="textPassword"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-        <RelativeLayout
-            android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
-            android:gravity="center_vertical"
-            android:layout_height="24dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:text="随便看看"
-                android:id="@+id/tv_use_free"
-                android:textColor="@color/item_peccany_card_text"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="40dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:text="@string/sample_text"
                 android:textColor="@color/login_blue_color"
-                android:text="忘记密码？"
+                android:textSize="@dimen/login_frame_textsize" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/tv_use_free"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="40dp"
+                android:text="随便看看"
+                android:textColor="@color/item_peccany_card_text"
+                android:textSize="14sp" />
+
+            <TextView
                 android:id="@+id/tv_forget_password"
-                android:textSize="14sp"
-                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_marginRight="34dp" />
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="34dp"
+                android:text="忘记密码？"
+                android:textColor="@color/login_blue_color"
+                android:textSize="14sp" />
         </RelativeLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="104dp"
             android:layout_marginTop="16dp">
+
             <TextView
-                android:layout_centerInParent="true"
+                android:id="@+id/tv_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:layout_centerInParent="true"
                 android:background="@mipmap/login_background"
                 android:gravity="center_horizontal"
                 android:paddingTop="8dp"
-                android:id="@+id/tv_login"
+                android:text="登录"
                 android:textColor="@color/vehicle_information_choose_vehicle_text_color"
-                android:text="登录"/>
+                android:textSize="20sp" />
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
