--- a/app/src/main/res/layout/activity_forget.xml
+++ b/app/src/main/res/layout/activity_forget.xml
@@ -12,42 +12,14 @@
         android:background="@color/toolbar_background"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/username_frame_height"
-            android:layout_marginLeft="@dimen/frame_margin"
-            android:layout_marginRight="@dimen/frame_margin"
-            android:layout_marginTop="32dp"
-            android:background="@mipmap/username_frame"
-            android:gravity="center_vertical">
 
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginLeft="16dp"
-                android:src="@mipmap/username_img" />
-
-            <EditText
-                android:id="@+id/et_username"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="24dp"
-                android:layout_marginRight="28dp"
-                android:background="@null"
-                android:imeOptions="actionNext"
-                android:nextFocusForward="@+id/et_tel"
-                android:singleLine="true"
-                android:text="@string/sample_text"
-                android:textColor="@color/login_blue_color"
-                android:textSize="@dimen/login_frame_textsize" />
-        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/username_frame_height"
             android:layout_marginLeft="@dimen/frame_margin"
             android:layout_marginRight="@dimen/frame_margin"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="48dp"
             android:background="@mipmap/username_frame"
             android:gravity="center_vertical"
             android:orientation="horizontal">
@@ -61,27 +33,30 @@
 
             <EditText
                 android:id="@+id/et_tel"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/tv_send_authcode"
+                android:layout_toStartOf="@+id/tv_send_authcode"
                 android:layout_marginLeft="64dp"
                 android:background="@null"
+                android:digits="@string/limit_phone"
                 android:imeOptions="actionNext"
+                android:inputType="number"
                 android:nextFocusForward="@+id/et_authcode"
                 android:singleLine="true"
-                android:inputType="number"
                 android:text="@string/sample_text"
                 android:textColor="@color/login_blue_color"
                 android:textSize="@dimen/login_frame_textsize" />
 
             <TextView
                 android:id="@+id/tv_send_authcode"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:background="@mipmap/send_authcode"
-                android:gravity="center_vertical"
+                android:gravity="center"
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
                 android:text="发送验证码"
@@ -110,9 +85,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="28dp"
-                android:inputType="number"
                 android:background="@null"
+                android:digits="@string/auth_code"
                 android:imeOptions="actionNext"
+                android:inputType="number"
                 android:nextFocusForward="@+id/et_password1"
                 android:singleLine="true"
                 android:text="@string/sample_text"
@@ -142,6 +118,7 @@
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="28dp"
                 android:background="@null"
+                android:digits="@string/limit_code"
                 android:imeOptions="actionNext"
                 android:inputType="textPassword"
                 android:nextFocusForward="@+id/et_password2"
@@ -173,6 +150,7 @@
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="28dp"
                 android:background="@null"
+                android:digits="@string/limit_code"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
                 android:singleLine="true"
@@ -184,7 +162,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="104dp"
-            android:layout_marginTop="16dp">
+            android:layout_marginTop="48dp">
 
             <TextView
                 android:id="@+id/tv_nosame"
