--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="28dp"
                 android:background="@null"
+                android:digits="@string/limit_code"
                 android:imeOptions="actionNext"
                 android:nextFocusForward="@+id/et_password"
                 android:singleLine="true"
@@ -76,9 +77,10 @@
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="28dp"
                 android:background="@null"
-                android:singleLine="true"
+                android:digits="@string/limit_code"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
+                android:singleLine="true"
                 android:text="@string/sample_text"
                 android:textColor="@color/login_blue_color"
                 android:textSize="@dimen/login_frame_textsize" />
