2016 4月4日 18:22 增加了选择车辆，使用MVP将代码全部重构一便

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,8 +5,8 @@
     <dimen name="drawer_layout_text_size">16sp</dimen>
     <dimen name="drawer_layout_name">16sp</dimen>
     <dimen name="drawer_layout_motto">12sp</dimen>
-    <dimen name="toolbar_left_image_width">18dp</dimen>
-    <dimen name="toolbar_left_image_height">18dp</dimen>
+    <dimen name="icon_size_width">18dp</dimen>
+    <dimen name="icon_size_height">18dp</dimen>
     <dimen name="toolbar_title_size">22sp</dimen>
     <dimen name="toolbar_location_text_size">15sp</dimen>
     <dimen name="toolbar_location_image_width">16dp</dimen>
