--- a/app/src/main/res/layout/activity_add_vehicle.xml
+++ b/app/src/main/res/layout/activity_add_vehicle.xml
@@ -12,8 +12,8 @@
         <ImageView
             android:background="?android:attr/selectableItemBackground"
             android:id="@+id/iv_back"
-            android:layout_width="@dimen/toolbar_left_image_width"
-            android:layout_height="@dimen/toolbar_left_image_height"
+            android:layout_width="@dimen/icon_size_width"
+            android:layout_height="@dimen/icon_size_height"
             android:layout_marginLeft="13dp"
             android:src="@mipmap/add_back" />
 
