--- a/app/src/main/res/layout/add_success.xml
+++ b/app/src/main/res/layout/add_success.xml
@@ -13,8 +13,8 @@
 
         <ImageView
             android:id="@+id/iv_toolbar_left_image"
-            android:layout_width="@dimen/toolbar_left_image_width"
-            android:layout_height="@dimen/toolbar_left_image_height"
+            android:layout_width="@dimen/icon_size_width"
+            android:layout_height="@dimen/icon_size_height"
             android:layout_marginLeft="13dp"
             android:background="?android:attr/selectableItemBackground"
             android:src="@mipmap/tb_back" />
