--- a/app/src/main/res/layout/dl_left_information.xml
+++ b/app/src/main/res/layout/dl_left_information.xml
@@ -20,7 +20,7 @@
             android:id="@+id/civ_head"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:src="@mipmap/dl_example_head" />
+            android:src="@mipmap/no_head" />
 
         <LinearLayout
             android:layout_width="match_parent"
