--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,7 +9,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/toolbar_background">
+        android:background="@color/white_background">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -249,7 +249,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
-                android:background="@color/toolbar_background" />
+                android:background="@color/white_background" />
 
         </LinearLayout>
 
