--- a/app/src/main/res/layout/add_success.xml
+++ b/app/src/main/res/layout/add_success.xml
@@ -8,7 +8,7 @@
         android:id="@+id/tb_main_toobar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/toolbar_height"
-        android:background="@color/toolbar_background"
+        android:background="@color/white_background"
         android:paddingTop="@dimen/toolbar_top">
 
         <ImageView
@@ -56,7 +56,7 @@
             android:layout_height="320dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
-            android:background="@color/toolbar_background">
+            android:background="@color/white_background">
 
             <ImageView
                 android:id="@+id/iv_vehicle_img"
