--- a/app/src/main/res/layout/peccany_toolbar.xml
+++ b/app/src/main/res/layout/peccany_toolbar.xml
@@ -3,7 +3,7 @@
     android:id="@+id/tb_main_toobar"
     android:layout_width="match_parent"
     android:layout_height="@dimen/toolbar_height"
-    android:background="@color/toolbar_background"
+    android:background="@color/white_background"
     android:paddingTop="@dimen/toolbar_top">
 
     <ImageView
