--- a/app/src/main/res/layout/popup_list.xml
+++ b/app/src/main/res/layout/popup_list.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/fragment_background">
     <ListView
+        android:divider="@null"
         android:id="@+id/lv_my_vehicle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
