--- a/app/src/main/res/drawable/vehicle_text.xml
+++ b/app/src/main/res/drawable/vehicle_text.xml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <color android:color="@color/vehicle_information_choose_vehicle_text_color"/>
-    </item>
-    <item >
-        <color android:color="#999999"/>
-    </item>
-
-    <item android:state_selected="true">
-        <color android:color="@color/vehicle_information_choose_vehicle_text_color" />
-    </item>
+    <item android:color="@color/vehicle_information_choose_vehicle_text_color" android:state_pressed="true" />
+    <item android:color="#999999" />
+    <item android:color="@color/vehicle_information_choose_vehicle_text_color" android:state_selected="true" />
 
 </selector>
