--- a/app/src/main/res/layout/me_info.xml
+++ b/app/src/main/res/layout/me_info.xml
@@ -10,12 +10,12 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="8dp"
-        android:background="@mipmap/head_frame"
-        android:src="@mipmap/no_head" />
+        android:background="@mipmap/head_frame" />
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center_horizontal"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="张思远"
@@ -24,7 +24,8 @@
 
     <TextView
         android:id="@+id/tv_motto"
-        android:layout_width="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:maxLength="46"
