--- a/app/src/main/res/layout/popup_list_item.xml
+++ b/app/src/main/res/layout/popup_list_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="40dp"
     android:background="@drawable/vehicle_list">
     <TextView
-        android:textColor="#999999"
+        android:textColor="@drawable/vehicle_text"
         android:id="@+id/tv_vehicle_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
