--- a/app/src/main/res/layout/edit_motto.xml
+++ b/app/src/main/res/layout/edit_motto.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="完成"
-            android:textColor="#464646"
+            android:textColor="@color/add_vehicle_background"
             android:textSize="16sp"
             android:layout_marginRight="12dp"
             android:layout_gravity="end" />
