--- a/app/src/main/res/layout/activity_queryothers.xml
+++ b/app/src/main/res/layout/activity_queryothers.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/fragment_background"
@@ -104,14 +103,14 @@
         <ImageView
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:layout_gravity="center_vertical"
             android:layout_marginLeft="24dp"
+            android:layout_marginTop="24dp"
             android:src="@mipmap/licence_plate" />
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_vehicle_num"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/til_vehicle_num"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp">
@@ -124,7 +123,7 @@
                 android:hint="@string/input_num"
                 android:imeOptions="actionNext"
                 android:singleLine="true"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
         </android.support.design.widget.TextInputLayout>
 
 
@@ -138,13 +137,13 @@
         <ImageView
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:layout_gravity="center_vertical"
             android:layout_marginLeft="24dp"
+            android:layout_marginTop="24dp"
             android:src="@mipmap/frame_num" />
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
             android:id="@+id/til_frame_num"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="20dp"
@@ -153,12 +152,12 @@
             <EditText
                 android:id="@+id/et_frame_num"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:ellipsize="start"
                 android:hint="@string/input_frame"
                 android:imeOptions="actionNext"
                 android:singleLine="true"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
@@ -170,8 +169,8 @@
         <ImageView
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:layout_gravity="center_vertical"
             android:layout_marginLeft="24dp"
+            android:layout_marginTop="24dp"
             android:src="@mipmap/engine_function" />
 
         <android.support.design.widget.TextInputLayout
@@ -190,7 +189,7 @@
                 android:hint="@string/input_engine"
                 android:imeOptions="actionNext"
                 android:singleLine="true"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
