修改了已知bug

--- a/app/src/main/res/layout/me_info.xml
+++ b/app/src/main/res/layout/me_info.xml
@@ -5,29 +5,40 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/civ_head"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="8dp"
-        android:background="@mipmap/head_frame" />
+    <RelativeLayout
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="8dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@mipmap/head_frame" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/civ_head"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
+
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="match_parent"
-        android:gravity="center_horizontal"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:gravity="center_horizontal"
         android:text="张思远"
         android:textColor="#333333"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tv_motto"
-        android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:gravity="center_horizontal"
         android:maxLength="46"
         android:text="The best accessory a girlcan own is confindence"
         android:textSize="12sp" />
