--- a/app/src/main/res/layout/edit_motto.xml
+++ b/app/src/main/res/layout/edit_motto.xml
@@ -44,7 +44,9 @@
             android:layout_marginTop="24dp">
             <EditText
                 android:id="@+id/et_motto"
-                android:layout_width="wrap_content"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLength="100"
                 android:paddingTop="8dp"
