--- a/app/src/main/res/layout/edit_name.xml
+++ b/app/src/main/res/layout/edit_name.xml
@@ -4,61 +4,71 @@
     android:layout_height="match_parent"
     android:background="#F9F9F9"
     android:orientation="vertical">
+
     <android.support.v7.widget.Toolbar
-        android:layout_marginTop="24dp"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:gravity="center_vertical"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginTop="24dp"
+        android:gravity="center_vertical">
+
         <ImageView
             android:id="@+id/iv_toolbar_left_image"
             android:layout_width="18dp"
             android:layout_height="18dp"
-            android:src="@mipmap/add_back"/>
+            android:src="@mipmap/add_back" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:text="修改名称"
             android:textColor="@color/blue_color"
-            android:textSize="20sp"
-            android:layout_gravity="center_horizontal" />
+            android:textSize="20sp" />
+
         <TextView
             android:id="@+id/tv_complete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginRight="12dp"
             android:text="完成"
             android:textColor="@color/add_vehicle_background"
-            android:textSize="16sp"
-            android:layout_marginRight="12dp"
-            android:layout_gravity="end" />
+            android:textSize="16sp" />
     </android.support.v7.widget.Toolbar>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#F0F0F0"
         android:orientation="vertical">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#ffffff"
-            android:layout_marginTop="24dp">
+            android:layout_marginTop="24dp"
+            android:background="#ffffff">
+
             <EditText
                 android:id="@+id/et_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@null"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:maxLength="16"
                 android:paddingLeft="16dp"
-                android:textSize="18sp"
-                android:background="@null"/>
+                android:textSize="18sp" />
+
             <ImageView
                 android:id="@+id/iv_cancel"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:src="@mipmap/cancel"
-                android:layout_marginRight="10dp"
-                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:src="@mipmap/cancel" />
         </RelativeLayout>
     </LinearLayout>
 
