--- a/app/src/main/res/layout/me_info.xml
+++ b/app/src/main/res/layout/me_info.xml
@@ -1,26 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/civ_head"
         android:layout_width="110dp"
         android:layout_height="110dp"
-        android:layout_marginTop="8dp">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@mipmap/head_frame" />
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/civ_head"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerInParent="true" />
-    </RelativeLayout>
+        android:layout_marginTop="8dp"
+        app:civ_border_color="@color/blue_color"
+        app:civ_border_width="4dp" />
 
 
     <TextView
