--- a/app/src/main/res/layout/playing.xml
+++ b/app/src/main/res/layout/playing.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:background="@mipmap/playing_background"
@@ -11,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:orientation="horizontal"
-            android:id="@id/caidan"
+            android:id="@id/title_music"
             android:background="@mipmap/title_back"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/currentProgress"
@@ -79,7 +80,7 @@
             android:layout_height="wrap_content"
             android:background="@mipmap/title_back"
             android:id="@+id/turn"
-            android:layout_alignBottom="@id/caidan" />
+            android:layout_alignBottom="@id/title_music" />
         <TextView
             android:layout_marginTop="15dp"
             android:textSize="20dp"
@@ -100,7 +101,7 @@
             <Button
                 android:layout_width="81dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/xihuan"
+                android:id="@+id/myLove_playing"
                 android:background="@mipmap/playing_mylove_no"
                 android:layout_weight="1"
                 android:layout_gravity="bottom"
@@ -161,5 +162,103 @@
                 android:layout_alignParentEnd="true"
                 />
         </LinearLayout>
+    </RelativeLayout>
+</RelativeLayout>-->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:background="@mipmap/playing_back"
+    android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/music_arrow"
+            android:id="@+id/arrow"
+            android:layout_marginLeft="15dp"
+            android:layout_centerVertical="true"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="歌曲名"
+            android:id="@+id/songV"
+            android:textSize="25sp"
+            android:layout_centerInParent="true"
+            android:textColor="#ffffff"
+            android:singleLine="true"
+            android:ellipsize="end"
+            />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/liner"
+        android:id="@+id/seek">
+        <SeekBar
+            android:layout_width="290dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar"
+            android:indeterminate="false"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="15dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="当前时间"
+            android:id="@+id/currentProgress"
+            android:textColor="#ffffff"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="总共时间"
+            android:textColor="#ffffff"
+            android:id="@+id/finalProgress"
+            android:layout_alignTop="@+id/currentProgress"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:id="@+id/liner"
+        android:layout_alignParentBottom="true">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:background="@mipmap/music_arrow"
+            android:id="@+id/preBtn"
+            android:layout_toLeftOf="@+id/playBtn"
+            android:layout_marginRight="40dp"/>
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:background="@mipmap/music_pause"
+            android:id="@+id/playBtn"
+            android:layout_alignTop="@+id/preBtn"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"/>
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:background="@mipmap/music_next"
+            android:layout_toRightOf="@+id/playBtn"
+            android:layout_marginLeft="40dp"
+            android:id="@+id/nextBtn"
+            />
+
     </RelativeLayout>
 </RelativeLayout>
